--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-report.html
@@ -54,7 +54,7 @@
                   <td></td>
                 </tr>
                 <tr>
-                  <td class="table-nested-cell" colspan="7">
+                  <td class="table-nested-cell" colspan="{{4 + report.absenceTypesFiltered.length}}">
                     <crm-loading show="!report.sections.entitlements.loading">
                       <div
                         class="table-nested"
@@ -120,7 +120,7 @@
                   <td></td>
                 </tr>
                 <tr>
-                  <td class="table-nested-cell" colspan="7">
+                  <td class="table-nested-cell" colspan="{{4 + report.absenceTypesFiltered.length}}">
                     <crm-loading show="!report.sections.holidays.loading">
                       <div
                         class="table-nested"
@@ -181,7 +181,7 @@
                   <td></td>
                 </tr>
                 <tr>
-                  <td class="table-nested-cell" colspan="7">
+                  <td class="table-nested-cell" colspan="{{4 + report.absenceTypesFiltered.length}}">
                     <crm-loading show="!report.sections.approved.loading">
                       <div ng-show="report.sections.approved.open" class="table-nested">
                         <table class="table table-condensed">
@@ -246,7 +246,7 @@
                   <td></td>
                 </tr>
                 <tr>
-                  <td class="table-nested-cell" colspan="7">
+                  <td class="table-nested-cell" colspan="{{4 + report.absenceTypesFiltered.length}}">
                     <crm-loading show="!report.sections.expired.loading">
                       <div
                         class="table-nested"
@@ -332,7 +332,7 @@
                 <td class="chr_leave-report__table__heading--action"></td>
               </tr>
               <tr>
-                <td class="table-nested-cell" colspan="7">
+                <td class="table-nested-cell" colspan="{{4 + report.absenceTypesFiltered.length}}">
                   <crm-loading show="!report.sections.pending.loading">
                     <div
                       class="table-nested"
@@ -424,7 +424,7 @@
                 <td class="chr_leave-report__table__heading--action"></td>
               </tr>
               <tr>
-                <td class="table-nested-cell" colspan="7">
+                <td class="table-nested-cell" colspan="{{4 + report.absenceTypesFiltered.length}}">
                   <crm-loading show="!report.sections.other.loading">
                     <div
                       class="table-nested"
