PCHR-2546: Migrate L&A Import screen, step 3, to Bootstrap

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-leave-and-absences-import-form.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-leave-and-absences-import-form.scss
@@ -53,4 +53,25 @@
       }
     }
   }
+
+  // Step 3:
+  #preview-counts {
+    box-shadow: none;
+    margin-bottom: 2em;
+    width: 100%;
+
+    tr.danger td {
+      background-color: $state-danger-bg !important;
+      color: $brand-danger;
+
+      a {
+        color: darken($brand-danger, 5%);
+        font-weight: bold;
+
+        &:hover {
+          color: darken($brand-primary, 5%);
+        }
+      }
+    }
+  }
 }
