PCHR-2546: Migrate L&A Import screen, step 4, to Bootstrap

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-leave-and-absences-import-form.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-leave-and-absences-import-form.scss
@@ -54,8 +54,9 @@
     }
   }
 
-  // Step 3:
-  #preview-counts {
+  // Step 3 and 4:
+  #preview-counts,
+  #summary-counts {
     box-shadow: none;
     margin-bottom: 2em;
     width: 100%;
