--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_manage-leave-requests.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_manage-leave-requests.scss
@@ -24,8 +24,9 @@
 
     .fa {
       font-size: 0.6em;
-      vertical-align: middle;
       margin-right: 5px;
+      margin-top: -2px;
+      vertical-align: middle;
     }
 
     @media screen and (max-width: $screen-sm-max) {
