--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-tab.html
@@ -1,22 +1,18 @@
 <div class="chr_leave-balance-tab">
   <crm-loading show="!leaveBalanceTab.loading.component">
-    <leave-balance-tab-filters
-      absence-periods="leaveBalanceTab.absencePeriods"
-      absence-types="leaveBalanceTab.absenceTypes"
-      logged-in-contact-id="leaveBalanceTab.loggedInContactId">
-    </leave-balance-tab-filters>
-
-    <div class="chr_leave-balance-tab__report panel panel-default">
-      <div class="panel-body">
+    <div class="panel panel-default">
+      <div class="panel-heading clearfix chr_leave-balance-tab__header">
+        <leave-balance-tab-filters
+          absence-periods="leaveBalanceTab.absencePeriods"
+          absence-types="leaveBalanceTab.absenceTypes"
+          logged-in-contact-id="leaveBalanceTab.loggedInContactId">
+        </leave-balance-tab-filters>
+      </div>
+      <div class="panel-body chr_leave-balance-tab__body">
         <crm-loading show="!leaveBalanceTab.loading.report">
-          <h4>Results <span class="chr_leave-balance-tab__results-value">({{leaveBalanceTab.reportCount}})</span></h4>
-          <div class="chr_leave-balance-tab__overflow-scroll">
-            <table class="table table-responsive">
-              <tbody>
-                <tr>
-                  <th colspan="2"></th>
-                  <th colspan="4" ng-repeat="type in leaveBalanceTab.selectedAbsenceTypes">{{type.title}}</th>
-                </tr>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
                 <tr>
                   <th class="chr_leave-balance-tab__contact-id-column">Contact ID</th>
                   <th class="chr_leave-balance-tab__name-column">Name</th>
@@ -25,7 +21,7 @@
                   <th>Balance</th>
                   <th ng-repeat-end>Requested</th>
                 </tr>
-              </tbody>
+              </thead>
               <tbody>
                 <tr ng-repeat="record in leaveBalanceTab.report">
                   <td>{{record.contact_id}}</td>
@@ -35,17 +31,21 @@
                   <td>{{record.absence_types[type.id].balance}}</td>
                   <td ng-repeat-end>{{record.absence_types[type.id].requested}}</td>
                 </tr>
+                <tr ng-if="leaveBalanceTab.reportCount > leaveBalanceTab.pagination.size">
+                  <td colspan="6">
+                    <nav class="chr_leave-balance-report__pagination">
+                      <uib-pagination
+                        total-items="leaveBalanceTab.reportCount"
+                        items-per-page="leaveBalanceTab.pagination.size"
+                        ng-model="leaveBalanceTab.pagination.page"
+                        ng-change="leaveBalanceTab.loadReportCurrentPage()">
+                      </uib-pagination>
+                    </nav>
+                  </td>
+                </tr>
               </tbody>
             </table>
           </div>
-          <nav class="chr_leave-balance-report__pagination">
-            <uib-pagination
-              total-items="leaveBalanceTab.reportCount"
-              items-per-page="leaveBalanceTab.pagination.size"
-              ng-model="leaveBalanceTab.pagination.page"
-              ng-change="leaveBalanceTab.loadReportCurrentPage()">
-            </uib-pagination>
-          </nav>
         </crm-loading>
       </div>
     </div>
