PCHR-2546: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-leave-and-absences-import-form.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-leave-and-absences-import-form.scss
@@ -50,6 +50,11 @@
 
       th {
         padding: $table-cell-padding;
+        border-right: none;
+      }
+
+      th, td {
+        padding: 5px;
       }
     }
   }
