--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-report.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-report.scss
@@ -36,7 +36,7 @@
 
 .chr_leave-report__heading {
   background-color: $crm-table-heading-bg;
-  border-bottom: 1px solid $crm-dark-grayblue;
+  border-bottom: 1px solid $chr-panel-border;
 
   .chr_leave-report__export-button {
     line-height: 2.4;
