--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/overrides/_variables.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/overrides/_variables.scss
@@ -5,4 +5,5 @@ $chr-table-condensed-cell-padding: 8px 5px;
 $chr-table-heading-padding:        13px 20px;
 $chr-table-nested-indent-color:    $crm-darker-grayblue;
 $chr-table-nested-indent-width:    10px;
-$chr-panel-header-background:      #f4f7f8;
+$chr-panel-header-background:      #f7f7f9;
+$chr-panel-border:                 #dadcde;
