--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
@@ -15,7 +15,7 @@ $row-margin-bottom: 15px;
 
   @media screen and (max-width: $screen-xs-max) {
     .chr_leave-request-date-picker-container {
-      padding-right: 0;
+      margin-bottom: 20px;
     }
   }
 }
