--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-tab-filters.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-tab-filters.html
@@ -2,7 +2,7 @@
   <div class="crm_custom-select crm_custom-select--full">
     <select class="form-control no-select2"
       ng-change="balanceFilters.submitFilters()"
-      ng-model="balanceFilters.filters.absence_type"
+      ng-model="balanceFilters.filters.type_id"
       ng-options="type.id as type.title for type in balanceFilters.absenceTypes | orderBy:'title'">
     </select>
     <span class="crm_custom-select__arrow"></span>
@@ -12,7 +12,7 @@
   <div class="crm_custom-select crm_custom-select--full">
     <select class="form-control no-select2"
       ng-change="balanceFilters.submitFilters()"
-      ng-model="balanceFilters.filters.absence_period"
+      ng-model="balanceFilters.filters.period_id"
       ng-options="period.id as balanceFilters.labelPeriod(period) for period in balanceFilters.absencePeriods | orderBy:'-start_date' ">
     </select>
     <span class="crm_custom-select__arrow"></span>
