--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-tab.html
@@ -15,8 +15,7 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th class="chr_leave-balance-tab__contact-id-column">Contact ID</th>
-                  <th class="chr_leave-balance-tab__name-column">Name</th>
+                  <th class="chr_leave-balance-tab__name-column">Employee Name</th>
                   <th ng-repeat-start="absenceTypes in leaveBalanceTab.selectedAbsenceTypes">Entitlement</th>
                   <th>Used</th>
                   <th>Balance</th>
@@ -25,7 +24,6 @@
               </thead>
               <tbody>
                 <tr ng-repeat="record in leaveBalanceTab.report">
-                  <td>{{record.contact_id}}</td>
                   <td>{{record.contact_display_name}}</td>
                   <td ng-repeat-start="type in leaveBalanceTab.selectedAbsenceTypes">{{record.absence_types[type.id].entitlement}}</td>
                   <td>{{record.absence_types[type.id].used}}</td>
