--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-work-pattern-form.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-work-pattern-form.scss
@@ -11,22 +11,19 @@
 
   .work-pattern-week {
     border-top: 1px solid rgba(0, 0, 0, .2);
-    border-bottom: 1px solid rgba(0, 0, 0, .2);
     padding: 15px 0 15px 0;
     margin-bottom: 15px;
-  }
 
-  .work-pattern-week.hidden-week {
-    display: none;
-  }
+    &.hidden-week {
+      display: none;
+    }
 
-  .work-pattern-week .week-number {
-    float: left;
-    font-weight: bold;
-    padding: 5px 0 15px 5px;
-  }
+    .week-number {
+      float: left;
+      font-weight: bold;
+      padding: 5px 0 15px 5px;
+    }
 
-  .work-pattern-week {
     .week-days {
       table-layout: fixed;
     }
@@ -46,14 +43,13 @@
       }
 
       input {
-        width: 100%;
-        padding: 5px;
-        margin: 2px;
+        min-width: 0;
         text-align: center;
       }
 
       select {
-        width: 100%;
+        min-width: 0;
+        width: 100% !important;
       }
     }
 
