--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
@@ -1,5 +1,5 @@
 <div class="absence-tab-page">
-  <div class="container">
+  <div class="container-fluid">
     <leave-request-record-actions
       btn-class="btn-primary"
       contact-id="absence.contactId"
