PCHR-2593: Implement date-picker component

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
@@ -135,7 +135,7 @@ $row-margin-bottom: 15px;
 
 .chr_leave-request-modal__expiry-clear {
   position: absolute;
-  right: 3.5em;
+  right: 60px;
   top: 0.6em;
   z-index: 2;
 }
