--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/common.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/common.html
@@ -26,41 +26,15 @@
     <div class="form-group">
       <label class="col-sm-4 control-label required-mark">From Date</label>
       <div class="col-sm-4 chr_leave-request-date-picker-container">
-        <div class="input-group chr_leave-request-uib-date-picker">
-          <input
-            type="text"
-            class="form-control"
-            uib-datepicker-popup
-            show-button-bar="false"
-            datepicker-options="detailsTab.uiOptions.date.from.options"
-            ng-model="detailsTab.uiOptions.fromDate"
-            is-open="detailsTab.uiOptions.date.from.show"
-            ng-readonly="true"
-            ng-disabled="!detailsTab.isRole('admin') && (detailsTab.isMode('view') || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))"
-            ng-click="detailsTab.uiOptions.date.from.show = true"
-            ng-change="detailsTab.updateAbsencePeriodDatesTypes(detailsTab.uiOptions.fromDate, 'from')"/>
-          <span
-            class="input-group-addon pointer"
-            ng-disabled="!detailsTab.isRole('admin') && (detailsTab.isMode('view') || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))"
-            ng-click="detailsTab.uiOptions.date.from.show = true">
-            <i class="fa fa-calendar"></i>
-          </span>
-        </div>
-        <div class="chr_leave-request-html5-date-picker">
-          <input
-          required
-          ng-disabled="!detailsTab.isRole('admin') && (detailsTab.isMode('view') || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))"
-          class="form-control chr_leave-request-html5-date-picker"
-          ng-change="detailsTab.updateAbsencePeriodDatesTypes(detailsTab.uiOptions.fromDate, 'from')"
+        <date-picker
+          datepicker-options="detailsTab.uiOptions.date.from.options"
+          show-button-bar="false"
           ng-model="detailsTab.uiOptions.fromDate"
-          type="date">
-          <span
-            class="input-group-addon"
-            ng-disabled="!detailsTab.isRole('admin') &&
-            (detailsTab.isMode('view') || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))">
-              <i class="fa fa-calendar"></i>
-            </span>
-        </div>
+          is-open="detailsTab.uiOptions.date.from.show"
+          ng-readonly="true"
+          ng-disabled="!detailsTab.isRole('admin') && (detailsTab.isMode('view') || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))"
+          ng-change="detailsTab.updateAbsencePeriodDatesTypes(detailsTab.uiOptions.fromDate, 'from')">
+        </date-picker>
       </div>
       <div class="col-sm-4" ng-hide="detailsTab.isLeaveType('toil')">
         <crm-loading
@@ -93,45 +67,17 @@
     <div class="form-group">
       <label class="col-sm-4 control-label required-mark">To Date</label>
       <div class="col-sm-4 chr_leave-request-date-picker-container">
-        <div class="input-group chr_leave-request-uib-date-picker">
-          <input
-            type="text"
-            class="form-control"
-            uib-datepicker-popup
-            datepicker-options="detailsTab.uiOptions.date.to.options"
-            show-button-bar="false"
-            ng-model="detailsTab.uiOptions.toDate"
-            is-open="detailsTab.uiOptions.date.to.show"
-            ng-readonly="true"
-            ng-disabled="!detailsTab.isRole('admin') &&
+        <date-picker
+          datepicker-options="detailsTab.uiOptions.date.to.options"
+          show-button-bar="false"
+          ng-model="detailsTab.uiOptions.toDate"
+          is-open="detailsTab.uiOptions.date.to.show"
+          ng-readonly="true"
+          ng-disabled="!detailsTab.isRole('admin') &&
               (detailsTab.isMode('view') || !detailsTab.request.from_date || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))"
-            ng-click="detailsTab.uiOptions.date.to.show = true"
-            ng-change="detailsTab.updateAbsencePeriodDatesTypes(detailsTab.uiOptions.toDate, 'to')"/>
-          <span
-            class="input-group-addon pointer"
-            ng-disabled="!detailsTab.isRole('admin') &&
-              (detailsTab.isMode('view') || !detailsTab.request.from_date || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))"
-            ng-click="detailsTab.uiOptions.date.to.show = detailsTab.request.from_date ? true : false">
-            <i class="fa fa-calendar"></i>
-          </span>
-        </div>
-        <div class="chr_leave-request-html5-date-picker">
-          <input
-            required
-            ng-disabled="!detailsTab.isRole('admin') && (detailsTab.isMode('view') || !detailsTab.request.from_date || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))"
-            min="{{detailsTab.convertToHTML5DatepickerFormat(detailsTab.uiOptions.date.to.options.minDate)}}"
-            max="{{detailsTab.convertToHTML5DatepickerFormat(detailsTab.uiOptions.date.to.options.maxDate)}}"
-            class="form-control"
-            ng-change="detailsTab.updateAbsencePeriodDatesTypes(detailsTab.uiOptions.toDate, 'to')"
-            ng-model="detailsTab.uiOptions.toDate"
-            type="date">
-          <span
-            class="input-group-addon"
-            ng-disabled="!detailsTab.isRole('admin') &&
-            (detailsTab.isMode('view') || (detailsTab.isRole('manager') && !detailsTab.isMode('create') && !detailsTab.isLeaveType('sickness')))">
-              <i class="fa fa-calendar"></i>
-            </span>
-        </div>
+          ng-change="detailsTab.updateAbsencePeriodDatesTypes(detailsTab.uiOptions.toDate, 'to')"
+          custom-ng-click = "detailsTab.uiOptions.date.to.show = detailsTab.request.from_date ? true : false"">
+        </date-picker>
       </div>
       <div class="col-sm-4" ng-hide="detailsTab.isLeaveType('toil')">
         <crm-loading
