--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
@@ -15,7 +15,7 @@ $row-margin-bottom: 15px;
 
   @media screen and (max-width: $screen-xs-max) {
     .chr_leave-request-date-picker-container {
-      margin-bottom: 20px;
+      padding-right: 0;
     }
   }
 }
@@ -131,6 +131,13 @@ $row-margin-bottom: 15px;
 .chr_leave-request-modal__span-expiry {
   display: inline-block;
   margin-top: 7px;
+}
+
+.chr_leave-request-modal__expiry-clear {
+  position: absolute;
+  right: 3.5em;
+  top: 0.6em;
+  z-index: 2;
 }
 
 /*
