PCHR-2450: Change text to show when no contacts found in L&A Calendar

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-month.html
@@ -6,7 +6,7 @@
     <div class="chr_leave-calendar__month-body">
       <div ng-switch="!!month.contactsList().length">
         <div class="text-center" ng-switch-when="false">
-          Sorry No Contacts
+          There are no staff members matching selected filters
         </div>
 
         <div class="row chr_leave-calendar__month-container">
