--- a/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivihr/scss/overrides/_variables.scss
@@ -1,7 +1,7 @@
 @import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/overrides/variables";
 @import "SCSSROOT/org.civicrm.shoreditch/base/scss/overrides/variables";
 @import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/variables";
-
+@import "SCSSROOT/org.civicrm.shoreditch/scss/civicrm/variables";
 //== Steps
 //
 //##
@@ -12,3 +12,4 @@ $steps-height: 24px;
 $steps-compact-height: 28px;
 
 $steps-gutter: ($steps-height / 4);
+$button-dark-color: #AAAAAA;
