PCHR-2385: Adding rules to display Expiry Date field

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-details-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-details-tab.html
@@ -87,7 +87,7 @@
   </crm-loading>
 
   <!--Expiry Date Section - Only For Toil-->
-  <div class="row" ng-show="detailsTab.isLeaveType('toil') && (detailsTab.requestCanExpire || detailsTab.canManage)">
+  <div class="row" ng-show="detailsTab.displayExpiryDateField">
     <div class="col-xs-12 form-horizontal">
       <hr>
       <div class="form-group">
