--- a/org.civicrm.reqangular/src/common/templates/angular-date/day.html
+++ b/org.civicrm.reqangular/src/common/templates/angular-date/day.html
@@ -1,54 +1,51 @@
-<table role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="{{activeDateId}}">
-    <thead>
+<table role="grid" aria-labelledby="{{ uniqueId }}-title" aria-activedescendant="{{ activeDateId }}">
+  <thead>
     <tr>
-        <th>
-            <button type="button" class="btn btn-default btn-sm pull-left" ng-click="move(-1)" tabindex="-1">
-                <strong> < </strong>
-            </button>
-        </th>
-        <th colspan="{{5 + showWeeks}}">
-            <button id="{{uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button"
-                    class="btn btn-default btn-sm" ng-click="toggleMode()" tabindex="-1" style="width:100%;"><strong>{{title}}</strong>
-            </button>
-        </th>
-        <th>
-            <button type="button" class="btn btn-default btn-sm pull-right" ng-click="move(1)" tabindex="-1"><strong> > </strong></button>
-        </th>
+      <th>
+        <button type="button" class="btn btn-default btn-sm pull-left" ng-click="move(-1)" tabindex="-1">
+          <strong> < </strong>
+        </button>
+      </th>
+      <th colspan="{{ 5 + showWeeks }}">
+        <button id="{{ uniqueId }}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button"
+          class="btn btn-default btn-sm" ng-click="toggleMode()" tabindex="-1" style="width:100%;">
+          <strong>{{ title }}</strong>
+        </button>
+      </th>
+      <th>
+        <button type="button" class="btn btn-default btn-sm pull-right" ng-click="move(1)" tabindex="-1">
+          <strong> > </strong>
+        </button>
+      </th>
     </tr>
-
     <tr style="border-top: 1px solid #DDD">
-        <th ng-show="showWeeks" class="text-center"></th>
-        <th ng-repeat="label in labels track by $index" class="text-center">
-            <small aria-label="{{label.full}}">{{label.abbr[0]}}</small>
-        </th>
+      <th ng-show="showWeeks" class="text-center"></th>
+      <th ng-repeat="label in labels track by $index" class="text-center">
+        <small aria-label="{{ label.full }}">{{ label.abbr[0] }}</small>
+      </th>
     </tr>
-
-    </thead>
-
-    <tbody>
+  </thead>
+  <tbody>
     <style>
-        tr td.text-center span.out-of-scope{
-            color: #CCCCCC;
-        }
+      tr td.text-center span.out-of-scope{
+        color: #CCCCCC;
+      }
     </style>
     <tr ng-repeat="row in rows track by $index">
-        <td ng-show="showWeeks" class="text-center h6"><em>{{ weekNumbers[$index] }}</em></td>
-        <td ng-repeat="dt in row track by dt.date" class="text-center" role="gridcell" id="{{dt.uid}}"
-            aria-disabled="{{!!dt.disabled}}">
-            <button type="button"
-                    style="width:100%;"
-                    class="btn btn-default btn-sm"
-                    ng-class="{
-                        'btn-info': dt.selected,
-                        active: isActive(dt)
-                    }"
-                    ng-click="select(dt.date)"
-                    ng-disabled="dt.disabled"
-                    tabindex="-1">
-<!--'text-muted': dt.secondary, -->
-                <span ng-class="{'out-of-scope': dt.secondary, 'text-info': dt.current}">{{dt.label}}</span>
-            </button>
-        </td>
+      <td ng-show="showWeeks" class="text-center h6"><em>{{ weekNumbers[$index] }}</em></td>
+      <td ng-repeat="dt in row track by dt.date" class="text-center" role="gridcell" id="{{ dt.uid }}"
+        aria-disabled="{{ !!dt.disabled }}">
+        <button type="button"
+          style="width:100%;"
+          class="btn btn-default btn-sm"
+          ng-class="{ 'btn-info': dt.selected, active: isActive(dt) }"
+          ng-click="select(dt.date)"
+          ng-disabled="dt.disabled"
+          tabindex="-1">
+          <!--'text-muted': dt.secondary, -->
+          <span ng-class="{ 'out-of-scope': dt.secondary, 'text-info': dt.current }">{{ dt.label }}</span>
+        </button>
+      </td>
     </tr>
-    </tbody>
+  </tbody>
 </table>
